# data-explorer

./: .gitignore  CMakeLists.txt  CMakeLists.txt.cpputils  CMakeLists.txt.in  Column.cpp  Column.h  DataLoader.h  Dataset.cpp  Dataset.h  FileDataLoader.cpp  FileDataLoader.h  IntegerColumn.cpp  IntegerColumn.h  LICENSE  README.md  StringColumn.cpp  StringColumn.h  Tests.cmake  UserInterface.cpp  data-explorer.pro  main.cpp  operation.cpp  operation.h  sample.txt  sonar-project.properties
.github/workflows/: buld-and-test.yml  static-analysis-and-coverage.yml
src/: CMakeLists.txt  Column.cpp  Column.h  DataLoader.h  Dataset.cpp  Dataset.h  FileDataLoader.cpp  FileDataLoader.h  IntegerColumn.cpp  IntegerColumn.h  Logger.h  Operation.cpp  Operation.h  OperationType.cpp  OperationType.h  Query.h  StringColumn.cpp  StringColumn.h  Timer.h  UserInterface.cpp  UserInterface.h  main.cpp
test/: CMakeLists.txt  ColumnTest.cpp  DatasetTest.cpp  FakeLoader.cpp  FakeLoader.h  FileDataLoaderTest.cpp  IntegerColumnTest.cpp  OperationTest.cpp  QueryTest.cpp  StdStreamEater.cpp  StdStreamEater.h  StringColumn.cpp  StringColumnTest.cpp  UserInterfaceTest.cpp
tests/: CMakeLists.txt  ColumnTest.cpp  FileDataLoaderTest.cpp  StringColumnTest.cpp  UserInterfaceTest.cpp
